product context获取modelcode增加排序