@@ -242,10 +242,10 @@ public class ProductContextQueryServiceImpl implements ProductContextQueryServic
     public ProductContextOptionsRespDto queryProductContextOptions() {
         ProductContextOptionsRespDto productContextOptionsRespDto = new ProductContextOptionsRespDto();
         //区分多租户
-        Set<String> releasedModelList = bomsOxoVersionSnapshotDao.queryAll().stream().map(snapShot->snapShot.getModelCode()).collect(Collectors.toSet());
-        List<String> modelCodeList = modelFacade.getModelListByBrand(ConfigConstants.brandName.get()).stream().filter(modelCode->releasedModelList.contains(modelCode)).toList();
-        productContextOptionsRespDto.setModelCode(modelCodeList);
-        productContextOptionsRespDto.setGroupCode(bomsFeatureLibraryDao.getGroupList().stream().map(group->group.getFeatureCode()).toList());
+        Set<String> modelCodeList = modelFacade.getModelListByBrand(ConfigConstants.brandName.get()).stream().collect(Collectors.toSet());
+        List<String> releasedModelList = bomsOxoVersionSnapshotDao.queryAll().stream().map(snapShot->snapShot.getModelCode()).distinct().filter(modelCode->modelCodeList.contains(modelCode)).sorted().collect(Collectors.toList());
+        productContextOptionsRespDto.setModelCode(releasedModelList);
+        productContextOptionsRespDto.setGroupCode(bomsFeatureLibraryDao.getGroupList().stream().map(group->group.getFeatureCode()).sorted().toList());
         return productContextOptionsRespDto;
     }
 }
